# Saddle

./: .gitignore  README.md  pyproject.toml
.claude/: settings.json
config/: llm_policy.json
docs/: INTENT_AUDIT.md
docs/audits/: rayxiv4_value_drift_and_supervision_evidence.md
docs/design/: codemap_value_axis.md  design_issues.md  mediator_front_end.md  supervisory_pipeline.md  topic_mind_map.md
src/saddle/: __init__.py  action_store.py  bubble.py  chat.py  cli.py  completion.py  context.py  converge.py  council.py  crossproject.py  design.py  dialog.py  dialog_store.py  dkb.py  doctrine.py  doctrine_hook.py  embed.py  embed_server.py  hold.py  (+22 more)
tests/: conftest.py  test_agent_effort.py  test_audit.py  test_audit_congruence.py  test_bubble.py  test_budget_deadline.py  test_caller_failover.py  test_cli_codemap.py  test_cli_converge.py  test_codemap_authority.py  test_codemap_congruence.py  test_codemap_coverage.py  test_codemap_freshness.py  test_codemap_gd_domain.py  test_codemap_impact.py  test_codemap_lifecycle.py  test_codemap_manifest.py  test_codemap_passdown.py  test_codemap_precision.py  test_codemap_refs.py  test_codemap_substrate.py  test_completion_gate.py  test_conformance.py  test_converge.py  test_council.py  test_crossproject.py  test_design_audit.py  test_design_hold_gate.py  test_design_intent_drift.py  test_design_round.py  test_design_surface.py  test_dialog_intent.py  test_directive_curation.py  test_directive_durability.py  test_dkb_cache.py  test_doctrine_guard.py  test_doctrine_hook.py  test_goal_keeper.py  test_hold.py  test_intake_hook.py  (+19 more)
(+30 files in other folders)
