[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "saddle"
version = "0.1.0"
description = "A small LLM harness: a project-specific provider pool plus an agentic Claude chat service."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "claude-agent-sdk>=0.1.71",
]

[project.scripts]
saddle = "saddle.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/saddle"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
